--- a/src/App.css
+++ b/src/App.css
@@ -196,3 +196,54 @@ h1 {
     font-size: 0.9rem;
   }
 }
+
+/*FORM LOGIN*/
+.container-login {
+  max-width: 400px;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 5px;;
+  padding: 2px;
+}
+.form-login {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+  background-color: var(--card-color);
+  padding: 15px;
+  border-radius: 8px;
+  border: 1px solid var(--border-color);
+  flex-wrap: wrap;
+}
+
+.form-login input,
+.form-login select {
+  padding: 8px;
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  flex: 1 1 15px;
+}
+
+.form-login input:focus,
+.form-login select:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.form-login button {
+  padding: 8px 16px;
+  background-color: var(--accent-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  flex: 1 1 15px;
+}
+
+.form-login button:hover {
+  background-color: var(--accent-hover);
+}
+/*FIM*/
