--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --accent-color: #4caf50;
   --accent-hover: #45a049;
   --danger-color: #f44336;
+  --warning-color: #e78d05e7;
 }
 
 body {
@@ -22,18 +23,37 @@ body {
   margin-top: 5px;;
   padding: 2px;
 }
-
-h1 {
-  text-align: center;
-  margin-bottom: 20px;
-  margin-top: 5px;
-}
-
 .dashboard {
   display: flex;
   gap: 10px;
   margin-bottom: 20px;
   flex-wrap: wrap;
+}
+h1 {
+  text-align: center;
+  margin-bottom: 2px;
+  margin-top: 10px;
+}
+.btnCadastroUser {
+  background-color: var(--warning-color);
+}
+.dash-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dash-header h1 {
+  text-align: center;
+  margin-bottom: 2px;
+  margin-top: 5px;
+}
+.dash-header button {
+    margin: 0;
+    margin-top: 1px;
+    margin-bottom: 10px;
+    width: 100px;
+    background-color: var(--warning-color);
 }
 
 /* Estilo geral dos cards */
